@@ -47,8 +47,7 @@ class XmlReporter(Reporter):
 
         # Create the DOM that will store the data.
         impl = xml.dom.minidom.getDOMImplementation()
-        docType = impl.createDocumentType("coverage", None, DTD_URL)
-        self.xml_out = impl.createDocument(None, "coverage", docType)
+        self.xml_out = impl.createDocument(None, "coverage", None)
 
         # Write header stuff.
         xcoverage = self.xml_out.documentElement
@@ -57,6 +56,7 @@ class XmlReporter(Reporter):
         xcoverage.appendChild(self.xml_out.createComment(
             " Generated by coverage.py: %s " % __url__
             ))
+        xcoverage.appendChild(self.xml_out.createComment(" Based on %s " % DTD_URL))
 
         # Call xml_file for each file in the data.
         self.report_files(self.xml_file, morfs)
