@@ -1,8 +1,7 @@
 <?xml version="1.0" ?>
-<!DOCTYPE coverage
-  SYSTEM 'https://raw.githubusercontent.com/cobertura/web/f0366e5e2cf18f111cbd61fc34ef720a6584ba02/htdocs/xml/coverage-03.dtd'>
 <coverage branch-rate="0" line-rate="0.6667" timestamp="1253972570431" version="3.1b1">
 	<!-- Generated by coverage.py: https://coverage.readthedocs.org/VER -->
+	<!-- Based on https://raw.githubusercontent.com/cobertura/web/f0366e5e2cf18f111cbd61fc34ef720a6584ba02/htdocs/xml/coverage-03.dtd -->
 	<sources>
 		<source></source>
 	</sources>
